--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                             <img class="aligncenter smallImg" src="images/abhi.png" alt="portrait-woman" width="165" height="165">
                             <p></p>
                             <h3 style="text-align: center;">Abhishek Srivastava</h3>
-                            <p style="text-align: center;">
-                                She is a sweatheart. Loves reading , well not novels though. She remind me what love and care is all about. When I first met her, I knew there was something special about her. Not just that because she had warm smile and attractive personality, but her attitude towards life.
+                            <p style="text-align: center;font-size:12px;">
+                                <strong>She is a sweatheart.</strong><br /> When I first met her, I knew there was something special about her. Not just that because she had warm smile and attractive personality, but her attitude towards life.
                                 
-                                When we were discussing about being together forever in a cafeteria at Lucknow Central Station (Yea Railway station), I just had one thought in my mind why I am even thinking. Lets do it. "She is the girl of my dreams."
+                                When we were discussing about being together forever in a cafeteria at Lucknow Central Station (Yea Railway station), I just had one thought in my mind why I am even thinking. Lets do it.<br/><span style="font-weight: bold;color: #F97EA7;font-size: 14px;"> "She is the girl of my dreams."</span>
                             </p>
                             <p style="text-align: center;">
                                 <a href="https://www.facebook.com/GeekAb" target="_blank">
