--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <img class="aligncenter smallImg" src="images/srish.png" alt="portrait-woman" width="165" height="165">
                             <p></p>
                             <h3 style="text-align: center;">Srishti Srivastava</h3>
-                            <p style="text-align: center;">
+                            <p style="text-align: center;font-size:12px;">
                                 <strong>He is a duffer.</strong><br/>
                                 When we met for the first time, I found him 180° to me, i mean completely opposite to me. But then opposite attracts also. I realized that my weakness is his strength &amp; actually he is completing me. Though am duffer in making decisions but saying yes to this duffer is the best decision of my life.<br/><span style="font-weight: bold;color: #F97EA7;font-size: 14px;">"Yeah, the only thing common between us."</span>
                             </p>
